--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
                 font-size: 14px;
                 line-height: 1.6;
             }
+            pre {
+                background: #24292e;
+                color:#eee;
+                border-radius: 4px;
+            }
         </style>
         
         
